After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646966 - rtpssrcdemux: Unknown SSRC is not fatal
rtpssrcdemux: Unknown SSRC is not fatal
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal major
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-06 22:08 UTC by Håvard Graff (hgr)
Modified: 2011-04-11 21:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.09 KB, patch)
2011-04-06 22:08 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2011-04-06 22:08:27 UTC
Created attachment 185371 [details] [review]
patch

...
Comment 1 Olivier Crête 2011-04-11 21:42:28 UTC
commit 0d2d52856ff22d61f65c558df5fd68a424ab1ef5
Author: Pascal Buhler <pascal.buhler@tandberg.com>
Date:   Tue Aug 24 13:57:55 2010 +0200

    rtpssrcdemux: Unknown SSRC is not fatal
    
    https://bugzilla.gnome.org/show_bug.cgi?id=646966